@@ -1,3 +1,8 @@
+*** 20010718_1 by bill
+
+- fixed small oopsie in setting chptr->juped
+
+
 *** 20010717_8 by lusky
 - fixed crypt.h check
 
